Fix download progress bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 	<h1><%= title %></h1>
 	<p>Welcome to <%= title %></p>
 	<script>
+		/*
 		$.ajaxTransport("+binary", function(options, originalOptions, jqXHR){
 			// check for conditions and support for blob / arraybuffer response type
 			if (window.FormData && ((options.dataType && (options.dataType == 'binary')) || (options.data && ((window.ArrayBuffer && options.data instanceof ArrayBuffer) || (window.Blob && options.data instanceof Blob)))))
@@ -33,6 +34,9 @@
 							var data = {};
 							data[options.dataType] = xhr.response;
 							// make callback and send data
+							console.log(xhr);
+							var resHeaders = xhr.getAllResponseHeaders();
+							console.log(resHeaders)
 							callback(xhr.status, xhr.statusText, data, xhr.getAllResponseHeaders());
 						});
 		 
@@ -59,15 +63,55 @@
 			processData: false,
 			success: function (data) {
 				console.log('success');
-				// console.log(data);
+				console.log(data);
 				var blob = new Blob([data], {type: 'application/x-binary; charset=utf-8'});
-				saveAs(blob, 'hi.xlsx');
+				// saveAs(blob, 'hi.xlsx');
 			},
 			error: function (err) {
 				console.log('err');
 				console.log(err);
 			}
 		});
+		*/
+		var xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function () {
+			if ((xhr.readyState == 4) && (xhr.status == 200)){
+				console.log(xhr);
+				var disposition = xhr.getResponseHeader('Content-Disposition');
+				var fields = disposition.split([';']);
+				var fileNameIndex = -1;
+				fields.map(function (element, index) {
+					fields[index] = element.trim();
+					if (fields[index].indexOf('filename*') >= 0){
+						fileNameIndex = index;
+					}
+				})
+				var fileName = '';
+				if (fileNameIndex == -1){
+					for(var i = 0; i < fields.length; i++){
+						if (fields[i].indexOf('filename=') >= 0){
+							fileNameIndex = i;
+						}
+					}
+				}
+				if (fileNameIndex == -1){
+					fileName = 'PCSDL.xlsx';
+				}
+				else {
+					fileName = fields[fileNameIndex].substring(fields[fileNameIndex].indexOf('PCSDL'));
+					fileName = decodeURIComponent(fileName);
+				}
+				console.log(fields);
+				var type = xhr.getResponseHeader('Content-Type');
+				console.log(type);
+				// var blob = new Blob([xhr.response], {type: 'application/x-binary; charset=utf-8'});
+				var blob = new Blob([xhr.response], {type: type});
+				saveAs(blob, fileName);
+			}
+		}
+		xhr.responseType = 'arraybuffer';
+		xhr.open('GET', 'http://localhost:8000/content/dia-chat/58459fc74737642118cc34b4?display=xlsx', true);
+		xhr.send();
 	</script>
   </body>
 </html>
