--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -1,4 +1,5 @@
 <div class="container map-detail" style="margin-top: 50px;" ng-if="data">
+	<script src="/javascripts/FileSaver.js"></script>
 	<center><h2>Các mẫu vật đã đăng</h2></center>
 	<div style="margin-bottom: 10px;">
 		<button type="button" class="btn btn-success" ng-click="selectAll()">Select all</button>
