--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -29,9 +29,9 @@
 						</div>
 					</td>
 					<td>
-						<p><b>Id: </b><a style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html"><span class="label label-info">{{post._id}}</span></a></p>
+						<p><b>Tên mẫu: </b><a style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html"><span class="label label-info">{{post.tenMau.tenVietNam}}</span></a></p>
 						<p><b>Người thu mẫu: </b>{{post.duLieuThuMau.nguoiThuMau}}</p>
-						<p><b>Tên mẫu: </b>{{post.tenMau.tenVietNam}}</p>
+						<p style="display: none"><b>Id: </b>{{post._id}}</p>
 						<p><b>Ngày đăng: </b>{{post.created_at | date: "dd-MM-yyyy hh:mm:ss"}}</p>
 					</td>
 					<td style="right: 0px; position: absolute;">
