--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
+	<head>
 	<title><%= title %></title>
-	<link rel='stylesheet' href='/stylesheets/style.css' />
-	<script src="/javascripts/jquery.js"></script>
-	<script src="/javascripts/FileSaver.js"></script>
+	<link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
 	
-  </head>
-  <body>
+	
+	<link rel="stylesheet" href="/stylesheets/datetimepicker.min.css">
+	<script src="/javascripts/jquery.js"></script>
+	<script src="/app/asset/js/jquery/bootstrap.js"></script>
+	<script src="/javascripts/FileSaver.js"></script>
+	<script src="/javascripts/datetimepicker.min.js"></script>
+
+    </script>
+
+	
+	</head>
+	<body>
 	<h1><%= title %></h1>
 	<p>Welcome to <%= title %></p>
+	<div class="well">
+		<div class="input-append datetimepicker">
+			<input data-format="dd-MM-yyyy" type="text" name="hehe"></input>
+			<span class="add-on">
+				<i data-time-icon="icon-time" data-date-icon="icon-calendar">
+				</i>
+			</span>
+		</div>
+	</div>
+	<script type="text/javascript">
+		jQuery(function() {
+			console.log('dmm')
+			jQuery('.datetimepicker').datetimepicker({
+				pickTime: false
+			});
+		});
+	</script>
 	<script>
 		/*
 		$.ajaxTransport("+binary", function(options, originalOptions, jqXHR){
@@ -73,45 +98,45 @@
 			}
 		});
 		*/
-		var xhr = new XMLHttpRequest();
-		xhr.onreadystatechange = function () {
-			if ((xhr.readyState == 4) && (xhr.status == 200)){
-				console.log(xhr);
-				var disposition = xhr.getResponseHeader('Content-Disposition');
-				var fields = disposition.split([';']);
-				var fileNameIndex = -1;
-				fields.map(function (element, index) {
-					fields[index] = element.trim();
-					if (fields[index].indexOf('filename*') >= 0){
-						fileNameIndex = index;
-					}
-				})
-				var fileName = '';
-				if (fileNameIndex == -1){
-					for(var i = 0; i < fields.length; i++){
-						if (fields[i].indexOf('filename=') >= 0){
-							fileNameIndex = i;
-						}
-					}
-				}
-				if (fileNameIndex == -1){
-					fileName = 'PCSDL.xlsx';
-				}
-				else {
-					fileName = fields[fileNameIndex].substring(fields[fileNameIndex].indexOf('PCSDL'));
-					fileName = decodeURIComponent(fileName);
-				}
-				console.log(fields);
-				var type = xhr.getResponseHeader('Content-Type');
-				console.log(type);
-				// var blob = new Blob([xhr.response], {type: 'application/x-binary; charset=utf-8'});
-				var blob = new Blob([xhr.response], {type: type});
-				saveAs(blob, fileName);
-			}
-		}
-		xhr.responseType = 'arraybuffer';
-		xhr.open('GET', 'http://localhost:8000/content/dia-chat/58459fc74737642118cc34b4?display=xlsx', true);
-		xhr.send();
+		// var xhr = new XMLHttpRequest();
+		// xhr.onreadystatechange = function () {
+		// 	if ((xhr.readyState == 4) && (xhr.status == 200)){
+		// 		console.log(xhr);
+		// 		var disposition = xhr.getResponseHeader('Content-Disposition');
+		// 		var fields = disposition.split([';']);
+		// 		var fileNameIndex = -1;
+		// 		fields.map(function (element, index) {
+		// 			fields[index] = element.trim();
+		// 			if (fields[index].indexOf('filename*') >= 0){
+		// 				fileNameIndex = index;
+		// 			}
+		// 		})
+		// 		var fileName = '';
+		// 		if (fileNameIndex == -1){
+		// 			for(var i = 0; i < fields.length; i++){
+		// 				if (fields[i].indexOf('filename=') >= 0){
+		// 					fileNameIndex = i;
+		// 				}
+		// 			}
+		// 		}
+		// 		if (fileNameIndex == -1){
+		// 			fileName = 'PCSDL.xlsx';
+		// 		}
+		// 		else {
+		// 			fileName = fields[fileNameIndex].substring(fields[fileNameIndex].indexOf('PCSDL'));
+		// 			fileName = decodeURIComponent(fileName);
+		// 		}
+		// 		console.log(fields);
+		// 		var type = xhr.getResponseHeader('Content-Type');
+		// 		console.log(type);
+		// 		// var blob = new Blob([xhr.response], {type: 'application/x-binary; charset=utf-8'});
+		// 		var blob = new Blob([xhr.response], {type: type});
+		// 		saveAs(blob, fileName);
+		// 	}
+		// }
+		// xhr.responseType = 'arraybuffer';
+		// xhr.open('GET', 'http://localhost:8000/content/dia-chat/58459fc74737642118cc34b4?display=xlsx', true);
+		// xhr.send();
 	</script>
-  </body>
+	</body>
 </html>
