flexdatalist in add-form

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -149,13 +149,7 @@
 						<option value="Mẫu type">Mẫu type</option>
 					</datalist>
 				</td>
-				<script type="text/javascript">
-					setTimeout(function () {
-						$('.flexdatalist').flexdatalist({
-							toggleSelected: true
-						});
-					}, 1000)
-				</script>
+				
 			</tr>
 			<tr><td><label>16. Kích thước mẫu vật<span class="has-required"> (*)</span>:</label></td></tr>
 			<tr>
@@ -535,7 +529,7 @@
 			<tr>
 				<td><label>51. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
 				<td>
-					<input type="" id="giaTriSuDung" title="{{tooltips[77]}}" name="giaTriSuDung" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true' ng-model="data.giaTriSuDung" list="datalist-giaTriSuDung">
+					<input type="" id="giaTriSuDung" title="{{tooltips[77]}}" name="giaTriSuDung" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true' ng-model="data.giaTriSuDung">
 					
 					
 				</td>
