Disable soLuongTieuBan + fix save autocompletion

--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -130,7 +130,7 @@
 				<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
 				<tr>
 					<td><label>14. Số lượng tiêu bản:</label></td>
-					<td><input type="number" min = "0" title="{{tooltips[23]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
+					<td><input type="number" disabled min = "0" title="{{tooltips[23]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>15. Loại mẫu vật<span class="has-required"> (*)</span>:</label></td>
