Display datetime in dd/MM/yyyy

--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -49,7 +49,7 @@
 				</tr>
 				<tr>
 					<td><label>08. Ngày định tên: </label></td>
-					<td><input type="date" title="{{tooltips[82]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[82]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" ></td>
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
@@ -181,7 +181,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
 					<td><label>19. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="date" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau"  required></td>
 				</tr>
 				<tr>
 					<td><label>20. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
@@ -339,7 +339,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH/ GIÁM ĐỊNH MẪU</h3>
 				<tr>
 					<td><label>39. Ngày phân tích mẫu đất:</label></td>
-					<td><input type="date" title="{{tooltips[45]}}" name="ngayPhanTichMauDat" ng-model="data.ngayPhanTichMauDat" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[45]}}" name="ngayPhanTichMauDat" ng-model="data.ngayPhanTichMauDat" ></td>
 				</tr>
 				<tr>
 					<td><label>40. Hồ sơ phân tích mẫu đất:</label></td>
@@ -351,7 +351,7 @@
 				</tr>
 				<tr>
 					<td><label>42. Thời gian giám định mẫu:</label></td>
-					<td><input type="date" title="{{tooltips[48]}}" name="thoiGianGiamDinhMau" ng-model="data.thoiGianGiamDinhMau" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[48]}}" name="thoiGianGiamDinhMau" ng-model="data.thoiGianGiamDinhMau" ></td>
 				</tr>
 				<tr>
 					<td><label>43. Người giám định mẫu <span class="has-required">(*)</span>:</label></td>
@@ -412,7 +412,7 @@
 				</tr>
 				<tr>
 					<td>Thời gian xử lý chế tác:</td>
-					<td><input type="text" title="{{tooltips[57]}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[57]}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy"></td>
 				</tr>
 				<tr>
 					<td>Người xử lý, chế tác:</td>
@@ -480,7 +480,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
 					<td><label>58. Ngày nhập mẫu: </label></td>
-					<td><input type="date" title="{{tooltips[67]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[67]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" ></td>
 				</tr>
 				<tr>
 					<td><label>59. Người giao mẫu: </label></td>
