--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -108,7 +108,7 @@
 			</tr>
 			<tr>
 				<td><label>08. Ngày định tên: </label></td>
-				<td><input type="date" title="{{tooltips[96]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form"></td>
+				<td><input type="text" title="{{tooltips[96]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td><label>09. Tên Việt Nam <span class="has-required"> (*)</span>:</label></td>
@@ -239,7 +239,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>19. Thời gian thu mẫu <span class="has-required"> (*)</span>:</label></td>
-				<td><input type="date" ng-model="data.thoiGianThuMau" title="{{tooltips[33]}}" name="thoiGianThuMau" class="input-form" required></td>
+				<td><input type="text" class="input-form datepicker" ng-model="data.thoiGianThuMau" title="{{tooltips[33]}}" name="thoiGianThuMau" required></td>
 			</tr>
 			<tr>
 				<td><label>20. Người thu mẫu <span class="has-required"> (*)</span>:</label></td>
@@ -374,7 +374,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>33. Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="date" ng-model="data.thoiGianPhanTich" title="{{tooltips[52]}}" name="thoiGianPhanTich" class="input-form"></td>
+				<td><input type="text" class="input-form datepicker" ng-model="data.thoiGianPhanTich" title="{{tooltips[52]}}" name="thoiGianPhanTich"></td>
 			</tr>
 			<tr>
 				<td><label>34. Người phân tích/giám định/định loại mẫu <span class="has-required"> (*)</span>:</label></td>
@@ -545,7 +545,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>53. Ngày nhập mẫu: </label></td>
-				<td><input type="date" ng-model="data.ngayNhapMau" title="{{tooltips[79]}}" name="ngayNhapMau" class="input-form"></td>
+				<td><input type="text" class="input-form datepicker" ng-model="data.ngayNhapMau" title="{{tooltips[79]}}" name="ngayNhapMau"></td>
 			</tr>
 			<tr>
 				<td><label>54. Người giao mẫu: </label></td>
