--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -51,7 +51,7 @@
 				</tr>
 				<tr>
 					<td><label>08. Ngày định tên: </label></td>
-					<td><input type="date" title="{{tooltips[83]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[83]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen"></td>
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
@@ -183,7 +183,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
 					<td><label>19. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="date" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" required></td>
 				</tr>
 				<tr>
 					<td><label>20. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
@@ -303,7 +303,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 				<tr>
 					<td><label>29. Thời gian phân tích/giám định/định loại mẫu:</label></td>
-					<td><input type="date" title="{{tooltips[35]}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[35]}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich"></td>
 				</tr>
 				<tr>
 					<td><label>30. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
@@ -498,7 +498,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
 					<td><label>57. Ngày nhập mẫu: </label></td>
-					<td><input type="date" title="{{tooltips[68]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips[68]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau"></td>
 				</tr>
 				<tr>
 					<td><label>58. Người giao mẫu: </label></td>
