--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -433,7 +433,7 @@
 			</tr>
 			<tr>
 				<td>Thuộc tính Xử lý chế tác:</td>
-				<td><input type="text" ng-model="data.thuocTinhXuLy" title="{{tooltips[64]}}" name="thuocTinhXuLy" class="input-form"></td>
+				<td><input type="file" multiple title="{{tooltips[64]}}" name="thuocTinhXuLy" ng-model="data.thuocTinhXuLy" accept=".doc, .docx, .pdf" class="input-form"></td>
 			</tr>
 			<tr>
 				<td>Phương thức xử lý chế tác:</td>
