--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -396,7 +396,7 @@
 				</tr>
 				<tr>
 					<td>Thuộc tính Xử lý chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips[59]}}" name="thuocTinhXuLyCheTac" ng-model="data.thuocTinhXuLyCheTac" accept="image/x-png, image/gif, image/jpeg, .pdf" class="input-form"></td>
+					<td><input type="file" multiple title="{{tooltips[59]}}" name="thuocTinhXuLyCheTac" ng-model="data.thuocTinhXuLyCheTac" accept=".doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Phương thức xử lý chế tác:</td>
